--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,4 +5,185 @@
 
 * {
     font-family: 'Roboto';
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr 5fr;
+    height: 100vh;
+}
+
+.header {
+    background-color: white;
+    grid-column: 2 / 3;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.headertop {
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 60px;
+    padding-right: 60px;
+    margin-top: 15px;
+}
+
+.searchbar {
+    display: flex;
+    gap: 10px;
+}
+
+.profile-bar {
+    display: flex;
+    gap: 25px;
+}
+
+.search-icon,
+.bell-icon,
+.admin-icon {
+    width: 1.6em;
+    height: 1.6em;
+    align-self: center;
+}
+
+input {
+   border: none;
+   border-radius: 15px;
+   width: 45vw;
+   max-width: 471px;
+   height: 25%;
+   background-color: rgb(215, 223, 244);
+   color: black;
+   padding: 5px 15px 5px 15px;
+   font-size: 16px;
+}
+
+.profile-bar > h4 {
+    font-weight: bolder;
+    align-self: center;
+}
+
+.headerbottom {
+    border: 1px solid red;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 60px 10px 60px;
+}
+
+.profile {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.name-greeting {
+    display: flex;
+    flex-direction: column;
+}
+
+.make-post {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.profile-icon {
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+button {
+    background-color: #2d7eff;
+    color: antiquewhite;
+    min-width: 75px;
+    max-width: 75px;
+    font-size: 13px;
+    padding: 5px 15px 5px 15px;
+    border-radius: 17px;
+}
+
+.sidebar {
+    background-color: #2d7eff;
+    grid-column: 1;
+    grid-row: 1 / 3;
+    display: flex;
+    flex-direction: column;
+}
+
+.sidebar > p {
+    border: 2px solid black;
+    font-size: 24px;
+    margin-bottom: 60px;
+    margin-top: 15px;
+    padding-left: 30px;
+    color: antiquewhite;
+}
+
+.toptag {
+    border: 2px solid green;
+    margin-bottom: 60px;
+}
+
+.bottomtag {
+    border: 2px solid rebeccapurple;
+}
+
+.items {
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+    list-style: none;
+    margin-bottom: 15px;
+    color:antiquewhite;
+}
+
+.maincontent {
+    background-color: rgb(215, 223, 244);
+    grid-column: 2;
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 20px 20px 50px 20px;
+    gap: 30px;
+}
+
+.left-grid {
+    grid-column: 1;
+    grid-row: 1 / 3;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    height: 100%;
+    gap: 15px;
+}
+
+.left-card {
+    border: 2px solid black;
+}
+
+.right-grid {
+    grid-column: 2;
+    grid-row: 1 / 3;
+    align-items: flex-end;
+}
+
+.right-card {
+    border: 2px solid black;
 }
